# dramatiq-sentinel

./: LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
dramatiq_sentinel/middleware/: __init__.py  sentinel.py
tests/middleware/: test_dramatiq_sentinel.py
